fixing some layout bugs

--- a/src/App.css
+++ b/src/App.css
@@ -229,6 +229,9 @@ display:flex;
 align-items:center;}
 /* .boxfive img{width:60%;} */
 .boxsix{grid-area:g}
+.boxsix img{transform: translateY(75px)
+
+}
 .boxseven{
   grid-area:a;
 }
